# squid-space

./: README.md
bootloaders/brain-modem/: Cargo.toml  memory.x
bootloaders/brain-modem/.cargo/: config.toml
bootloaders/brain-modem/src/: lib.rs
bootloaders/node/: Cargo.toml  memory.x
bootloaders/node/src/: lib.rs
crates/dabble/: Cargo.toml  NOTES.md
crates/dabble/src/: icd.rs  lib.rs  machine.rs
host/squid-ser-booter/: Cargo.toml
host/squid-ser-booter/src/: main.rs
