[package]
authors = ["James Munns <james@onevariable.com>"]
name = "node-bootloader"
edition = "2021"
version = "0.1.0"

[lib]
harness = false


[dependencies]
cortex-m = "0.7.3"
cortex-m-rt = "0.7.0"
smart-leds = "0.3.0"
ws2812-spi = { version = "0.4.0", features = ["mosi_idle_high"] }
groundhog = "0.2.5"
maxwell = "0.1.1"
rand_chacha = { version = "0.3.1", default-features = false }
panic-reset = "0.1.1"

# [dependencies.stm32g0]
# path = "./vendor/stm32g0"
# features = ["stm32g031"]

[dependencies.squid-boot]
package = "dabble"
path = "../../crates/dabble"

[dependencies.stm32g0xx-hal]
# path = "./vendor/stm32g0xx-hal"
git = "https://github.com/sprocket-board/stm32g0xx-hal"
branch = "balcony-project"
features = ["stm32g030", "rt"]

# cargo build/run
[profile.dev]
codegen-units = 1
debug = 2
debug-assertions = true # <-
incremental = false
opt-level = 3 # <-
overflow-checks = true # <-

# cargo test
[profile.test]
codegen-units = 1
debug = 2
debug-assertions = true # <-
incremental = false
opt-level = 3 # <-
overflow-checks = true # <-

# cargo build/run --release
[profile.release]
codegen-units = 1
debug = 2
debug-assertions = false # <-
incremental = false
lto = 'fat'
opt-level = 'z' # <-
overflow-checks = false # <-

# cargo test --release
[profile.bench]
codegen-units = 1
debug = 2
debug-assertions = false # <-
incremental = false
# see comment in the profile.release section
lto = false
opt-level = 'z' # <-
overflow-checks = false # <-

[patch.crates-io.stm32g0]
# path = "./vendor/stm32g0"
git = "https://github.com/sprocket-board/stm32-rs-nightlies"
rev = "ccef3a2a7b4184a61707da87b182d621d5fe830a"
